tests/single_instruction_translation_validation/mcsema/register-variants/vcvtpd2ps_xmm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:182:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %6) #22
            ^
0.01user 0.01system 0:00.02elapsed 112%CPU (0avgtext+0avgdata 27736maxresident)k
0inputs+16outputs (0major+3265minor)pagefaults 0swaps
